--- a/index.html
+++ b/index.html
@@ -1,116 +1,121 @@
-<html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' />
-
+    <meta charset="UTF-8">
+    <title>CYCLERS | STUDIO </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="icon" type="image/png" sizes="132x132" href="./images/cycler1-.png" />
-    <link rel="stylesheet" href="landing/landing.css">
-    <title>WELCOME TO CYCLERS STUDIO</title>
+    <link rel="stylesheet" href="./landing/landing.css">
+
 </head>
 
 <body>
-    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' />
-
+    <!-- partial:index.partial.html -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
 
     <div class="gallery">
         <div class="gallery__column">
-            <a href="./home.html" target="" class="gallery__link">
+            <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
-                    <img src="./landing_images/1.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
-                </figure>
-            </a>
-
-            <a href="./home.html" target="" class="gallery__link">
-                <figure class="gallery__thumb">
-                    <img src="./landing_images/5.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
-                </figure>
-            </a>
-
-            <a href="./home.html" target="" class="gallery__link">
-                <figure class="gallery__thumb">
-                    <img src="./landing_images/11.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
-                </figure>
-            </a>
-        </div>
-
-        <div class="gallery__column">
-            <a href="./home.html" target="" class="gallery__link">
-                <figure class="gallery__thumb">
-                    <img src="./landing_images/12.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                    <img src="./landing_images/1.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
-                    <img src="./landing_images/2.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                    <img src="./landing_images/10.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
                 </figure>
             </a>
 
-            <a href="./home.html" target="" class="gallery__link">
+            <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
-                    <img src="./landing_images/3.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
-                </figure>
-            </a>
-        </div>
-
-        <div class="gallery__column">
-            <a href="./home.html" target="" class="gallery__link">
-                <figure class="gallery__thumb">
-                    <img src="./landing_images/4.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
-                </figure>
-            </a>
-
-            <a href="./home.html" target="" class="gallery__link">
-                <figure class="gallery__thumb">
-                    <img src="./landing_images/9.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
-                </figure>
-            </a>
-
-            <a href="./home.html" target="" class="gallery__link">
-                <figure class="gallery__thumb">
-                    <img src="./landing_images/10.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                    <img src="./landing_images/8.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
                 </figure>
             </a>
         </div>
 
         <div class="gallery__column">
-            <a href="./home.html" target="" class="gallery__link">
+            <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
-                    <img src="./landing_images/6.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                    <img src="./landing_images/11.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
                 </figure>
             </a>
 
-            <a href="./home.html" target="" class="gallery__link">
+            <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
-                    <img src="./landing_images/7.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                    <img src="./landing_images/2.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
                 </figure>
             </a>
 
-            <a href="./home.html" target="" class="gallery__link">
+            <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
-                    <img src="./landing_images/8.jpg" alt="" class="gallery__image">
-                    <figcaption class="gallery__caption"><button>GET STARTED</button></figcaption>
+                    <img src="./landing_images/4.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                </figure>
+            </a>
+        </div>
+
+        <div class="gallery__column">
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/3.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/7.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/9.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                </figure>
+            </a>
+        </div>
+
+        <div class="gallery__column">
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/6.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/5.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/12.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                </figure>
+            </a>
+
+            <a href="./home.html" target="_blank" class="gallery__link">
+                <figure class="gallery__thumb">
+                    <img src="./landing_images/13.jpg" alt="CYCLERS STUDIO" class="gallery__image">
+                    <figcaption class="gallery__caption">CYCLERS</figcaption>
                 </figure>
             </a>
         </div>
     </div>
+    <!-- partial -->
+
 </body>
 
 </html>
