--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 </head>
 
 <body>
-    <!-- partial:index.partial.html -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Righteous:wght@900&display=swap" rel="stylesheet">
 
     <div class="gallery">
         <div class="gallery__column">
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/1.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">GET STARTED WITH CYCLERS EVENTS</figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/10.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">WELCOME TO CYCLERS STUDIO</figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/8.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">ABOUT CYCLERS STUDIO</figcaption>
                 </figure>
             </a>
         </div>
@@ -42,21 +42,21 @@
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/11.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">CYCLERS </figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/2.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">CYCLERS STUDIO PHOTOGRAPHY</figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/4.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">CYCLERS STUDIO EVENT COVERAGE</figcaption>
                 </figure>
             </a>
         </div>
@@ -65,21 +65,21 @@
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/3.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">TEAM CYCLERS STUDIO</figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/7.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">CYCLERS CONCERT </figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/9.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">PARTNER CYCLERS STUDIO</figcaption>
                 </figure>
             </a>
         </div>
@@ -88,14 +88,14 @@
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/6.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">CYCLERS STUDIO</figcaption>
                 </figure>
             </a>
 
             <a href="./home.html" target="_blank" class="gallery__link">
                 <figure class="gallery__thumb">
                     <img src="./landing_images/5.jpg" alt="CYCLERS STUDIO" class="gallery__image">
-                    <figcaption class="gallery__caption">CYCLERS</figcaption>
+                    <figcaption class="gallery__caption">MEET CYCLERS STUDIO</figcaption>
                 </figure>
             </a>
 
@@ -114,7 +114,7 @@
             </a>
         </div>
     </div>
-    <!-- partial -->
+
 
 </body>
 
