--- a/home.html
+++ b/home.html
@@ -454,7 +454,7 @@
 
         <div class="container">
             <div class="section-title">
-                <h1>Meet My Team</h1>
+                <h1>Meet Our Team</h1>
             </div>
 
             <div class="row">
