--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Audio Recording, Mixing, Editing, mastering, Live Session" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cyclers Studios</title>
+    <title>CYCLERS||STUDIOS</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet" />
@@ -21,7 +21,7 @@
 <body>
 
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v13.0" nonce="5jLuumlv"></script>
+
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
@@ -141,11 +141,11 @@
 
                         <div class="main__content">
                             <h1 class="vocal anim-typewriter">Artist</h1><br>
-                            <h2>Management</h2><br>
+                            <h2>Management</h2>
                             <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
-                        <div class="wave">
+                        <div class="wave art">
                             <img id="main__img" src="images/11_adobespark.png" style="height: 500px; width: 700px" />
                         </div>
                     </div>
@@ -233,18 +233,11 @@
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
-                        <!-- <div class="all-in-one">
-                    <img src="/images/noun_Music_1914708 1.png" alt="">
-                    <div class="media-description">
-                        <h3>All in one</h3>
-                        <p>ednostavno probni tekst koji se koristi u tiskarskoj i
-                            slovoslagarskoj </p>
-                    </div>
-                </div>     -->
-                        <div class="professional-equipment js-scroll slide-left">
+
+                        <div class="what-we-have professional-equipment js-scroll slide-left">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description ">
-                                <h1>Live Insruments</h1>
+                                <h1>Live Ins</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
@@ -254,49 +247,49 @@
                 <div class="assurance-we-have">
                     <div class="what-we-have">
                         <div class="live-equipment">
-                            <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
+
                             <div class="live-equipment-description js-scroll slide-right">
                                 <h1>Live Instruments</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
+
+
                         <div class="all-in-one">
                             <iframe width="460" height="315" src="https://www.youtube.com/embed/pSTqorxDhz4?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="media-description">
 
                             </div>
                         </div>
-                        <div class="professional-equipment js-scroll slide-left">
+
+
+
+
+
+                        <div class="what-we-have professional-equipment js-scroll slide-left">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
-                            <div class="live-equipment-description">
-                                <h1>Live Instruments</h1>
+                            <div class="live-equipment-description ">
+                                <h1>Live Ins</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="assurance-of-what-we-offer">
-                    <div class="what-we-offer">
-                        <div class="sound-quality">
-                            <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
+                <div class="assurance-we-have">
+                    <div class="what-we-have">
+                        <div class="live-equipment">
+
                             <div class="live-equipment-description js-scroll slide-right">
-                                <h1>Extra Sound Quality</h1>
+                                <h1>Live Instruments</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
-                        <!-- <div class="protection">
-                    <img src="/images/noun_Music_1914708 1.png" alt="">
-                    <div class="protection-description">
-                        <h3>Rights Protection</h3>
-                        <p>ednostavno probni tekst koji se koristi u tiskarskoj i
-                            slovoslagarskoj </p>
-                    </div> --
-                </div>     -->
-                        <div class="own-arrangements">
+
+                        <div class="what-we-have professional-equipment js-scroll slide-left">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
-                            <div class="own-arrangements-description js-scroll slide-left">
-                                <h1>Own Arrangements</h1>
+                            <div class="live-equipment-description ">
+                                <h1>Live Ins</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
