--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CYCLERS | STUDIO </title>
+    <title>CYCLERS||STUDIO </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="icon" type="image/png" sizes="132x132" href="./images/cycler1-.png" />
     <link rel="stylesheet" href="./landing/landing.css">
@@ -12,7 +12,7 @@
 
 <body>
 
-    <link href="https://fonts.googleapis.com/css2?family=Righteous:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 
     <div class="gallery">
         <div class="gallery__column">
