--- a/home.html
+++ b/home.html
@@ -51,9 +51,13 @@
                 <li class="navbar__item">
                     <a href="#contact" class="navbar__links">Contact Us</a>
                 </li>
+                <li>
 
-                <li class="navbar__item">
-                    <button><a href="#" class="navbar__links">BOOK</a></button>
+                    <div class="login-container">
+
+                        <button type="submit">BOOK AN APPOINTMENT</button>
+
+                    </div>
                 </li>
 
             </ul>
