--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
 
                     <div class="login-container">
 
-                        <button type="submit">BOOK AN APPOINTMENT</button>
+                        <button class="main__btn" type="submit"><a href="./form/form.html">Book An Appointment</a></button>
 
                     </div>
                 </li>
@@ -324,55 +324,60 @@
         <div class="work-sample-grid">
             <div class="grid-cointainer">
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/loop.png" alt="">
+                    <img src="./images/11.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>David Roger Music Concert</h4>
+                            <h4>CYCLERS CONCERT</h4>
                             <p>Event Management</p>
                         </div>
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-left">
-                    <img src="./images/loop.png" alt="">
+                    <img src="./images/12.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>The Loop Hall</h4>
-                            <p>Video Production</p>
+                            <h4>BTS</h4>
+                            <a href="./video production/video.html">
+                                <p>Video Production</p>
+                            </a>
+
                         </div>
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-right">
-                    <img src="./images/loop.png" alt="">
+                    <img src="./images/smiling-demon.png" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>Ben Stokes - Battle</h4>
+                            <h4>AUDIO</h4>
                             <p>Sound Mixing</p>
                         </div>
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-up">
-                    <img src="./images/loop.png" alt="">
+                    <img src="./images/14.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>Shaile Doe John</h4>
-                            <p>Photoshoot</p>
+                            <h4>OUTDOOR</h4>
+                            <a href="./photoshoot/photo.html">
+                                <p>Photo Shoot</p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-left">
-                    <img src="./images/loop.png" alt="">
+                    <img src="./images/15.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>Jazz Night Cocert</h4>
+                            <h4>WEDDINGS/BIRTHDAYS</h4>
                             <p>Event Management</p>
                         </div>
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/loop.png" alt="">
+                    <img src="./images/16.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>Robert Flemming</h4>
+                            <h4>INDOOR</h4>
                             <p>Photoshoot</p>
                         </div>
                     </div>
@@ -494,7 +499,7 @@
                         <div class="team-content">
                             <h2>Ekpere Godwin</h2>
                             <h3>Marketing Manager</h3>
-                            <p>..............<br>..........<br>..........</p>
+                            <p>Team Work<br>Promptness<br>Strategic</p>
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/@" class="fab fa-instagram"></a>
@@ -580,7 +585,7 @@
                         <div class="team-content">
                             <h2>Great Jonacs</h2>
                             <h3>Photographer</h3>
-                            <p>I am a photographer and Canon lover </p>
+                            <p>I am a photographer and Canon lover, I also like them big and hot! </p>
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/@" class="fab fa-instagram"></a>
