--- a/home.html
+++ b/home.html
@@ -324,7 +324,7 @@
         <div class="work-sample-grid">
             <div class="grid-cointainer">
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/11.jpg" alt="">
+                    <img src="./images/cncert.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
                             <h4>CYCLERS CONCERT</h4>
@@ -389,66 +389,7 @@
 
 
 
-    <!-- <section class = "cyclers-team">
-        <div class="our-team-wraper">
-            <div class="our-team-text">
-                <div class="our-team-header-wraper">
-                    <div class="our-team-header">
-                        <h3>Meet Our Team </h3>
-                        <div class="professional-team-flex">
-                            <h1>Professional Team</h1>
-                            <div class="professional-team-border"></div>
-                        </div>
-                    </div>
 
-                </div>
-
-            </div>
-        </div>
-
-
-        <div class="our-team">
-            <div class="team-photos">
-                <div class="team-detail">
-                    <h3 class="team-member-name">Becky</h3>
-                    <div class="team-photos-icons">
-                    <a href="#"><img src="./images/facebook-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/twitter-24.png" alt="" class="team-icon" ></a>
-                    </div>
-                    <img src="/images/photo_2022-02-23_16-56-59.jpg" alt="" class="team-photo">
-                </div>
-                <div class="team-detail">
-                    <h3 class="team-member-name">Becky</h3>
-                    <div class="team-photos-icons">
-                    <a href="#"><img src="./images/twitter-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/instagram-24.png" alt="" class="team-icon" ></a>
-                    </div>
-                    <img src="/images/photo_2022-02-23_16-57-00.jpg" alt="" class="team-photo">
-                </div>
-                <div class="team-detail">
-                    <h3 class="team-member-name">Becky</h3>
-                    <div class="team-photos-icons">
-                    <a href="#"><img src="./images/twitter-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/instagram-24.png" alt="" class="team-icon" ></a>
-                    </div>
-                    <img src="/images/photo_2022-02-23_16-57-01.jpg" alt="" class="team-photo">
-                </div>
-                <div class="team-detail">
-                    <h3 class="team-member-name">Becky</h3>
-                    <div class="team-photos-icons">
-                    <a href="#"><img src="./images/twitter-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/linkedin-24.png" alt="" class="team-icon" ></a>
-                    <a href="#"><img src="./images/instagram-24.png" alt="" class="team-icon" ></a>
-                    </div>
-                    <img src="./images/photo_2022-02-24_13-28-53.jpg" alt="" class="team-photo">
-                </div>
-            </div>
-        </div>
-
-    </section> -->
 
 
 
