--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
                     <a href="#services" class="navbar__links">Services</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#contact" class="navbar__links">Contact Us</a>
+                    <a href="./contact_us/contact.html" class="navbar__links">Contact Us</a>
                 </li>
                 <li>
 
@@ -185,7 +185,7 @@
 
                 <div class="container-serve">
                     <div class="box-serve">
-                        <div class="box-serve1 js-scroll slide-left">
+                        <div class="box-serve1 js-scroll slide-down">
 
                             <div class="content-serve">
                                 <h2>01</h2>
@@ -201,7 +201,7 @@
                     </div>
 
                     <div class="box-serve">
-                        <div class="box-serve2 js-scroll slide-right">
+                        <div class="box-serve2 js-scroll slide-down">
                             <div class="content-serve">
                                 <h2>02</h2>
                                 <h3>Photography</h3>
@@ -252,7 +252,7 @@
                     <div class="what-we-have">
                         <div class="live-equipment">
 
-                            <div class="live-equipment-description js-scroll slide-right">
+                            <div class="live-equipment-description js-scroll slide-down">
                                 <h1>Live Instruments</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
@@ -270,7 +270,7 @@
 
 
 
-                        <div class="what-we-have professional-equipment js-scroll slide-left">
+                        <div class="what-we-have professional-equipment js-scroll slide-down">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description ">
                                 <h1>Live Ins</h1>
@@ -284,13 +284,13 @@
                     <div class="what-we-have">
                         <div class="live-equipment">
 
-                            <div class="live-equipment-description js-scroll slide-right">
+                            <div class="live-equipment-description js-scroll slide-down">
                                 <h1>Live Instruments</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
 
-                        <div class="what-we-have professional-equipment js-scroll slide-left">
+                        <div class="what-we-have professional-equipment js-scroll slide-down">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description ">
                                 <h1>Live Ins</h1>
@@ -332,7 +332,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid-item  js-scroll slide-left">
+                <div class="grid-item  js-scroll slide-down">
                     <img src="./images/12.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
@@ -344,7 +344,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid-item  js-scroll slide-right">
+                <div class="grid-item  js-scroll slide-down">
                     <img src="./images/smiling-demon.png" alt="">
                     <div class="img-text">
                         <div class="cont">
@@ -353,7 +353,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid-item  js-scroll slide-up">
+                <div class="grid-item  js-scroll slide-down">
                     <img src="./images/14.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
@@ -364,7 +364,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid-item  js-scroll slide-left">
+                <div class="grid-item  js-scroll slide-down">
                     <img src="./images/15.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
@@ -411,7 +411,8 @@
                         <div class="team-content">
                             <h2>Mary Odogbo</h2>
                             <h3>General Manager</h3>
-                            <p> Mary likes to surf the net, travel, organize and decorate spaces. </p>
+                            <p> Mary Odogbo is the General Manager of cyclers Studio with 2 years of experience in leadership. Mary helped in sourcing for funds in organizing "the Cyclers Concert" geared towards promoting cultural exchange and also serving
+                                as a platform for talent showcase. Mary is inspired daily by her family. In her free time, Mary likes to surf the net, travel, organize and decorate spaces. </p>
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/marye_mareey" class="fab fa-instagram" target="_blank"></a>
@@ -433,7 +434,7 @@
                 </div>
 
                 <div class="column blogBox moreBox">
-                    <div class="team  js-scroll slide-up">
+                    <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/marketing_manager.jpg" alt="Team Image">
                         </div>
@@ -489,7 +490,7 @@
                 </div>
 
                 <div class="column blogBox moreBox">
-                    <div class="team  js-scroll slide-up">
+                    <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/photographer2.jpg" alt="Team Image">
                         </div>
@@ -519,7 +520,7 @@
 
 
                 <div class="column blogBox moreBox ">
-                    <div class="team  js-scroll slide-left">
+                    <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="images/photographer1.jpg" alt="Team Image">
                         </div>
@@ -547,7 +548,7 @@
                 </div>
 
                 <div class="column blogBox moreBox">
-                    <div class="team  js-scroll slide-right">
+                    <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/photographer3.jpg" alt="Team Image">
                         </div>
@@ -575,7 +576,7 @@
                 </div>
 
                 <div class="column blogBox moreBox">
-                    <div class="team  js-scroll slide-right">
+                    <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/videographer.jpg" alt="Team Image">
                         </div>
@@ -603,7 +604,7 @@
                 </div>
 
                 <div class="column blogBox moreBox">
-                    <div class="team  js-scroll slide-left">
+                    <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/dev.jpg" alt="Team Image">
                         </div>
@@ -644,7 +645,7 @@
 
         <div class="contact-section" id="contact">
 
-            <div class="contact js-scroll slide-up" id="contact">
+            <div class="contact js-scroll slide-down" id="">
                 <div>
                     <h5>SUBSCRIBE TO CYCLERS</h5>
                     <p>
