--- a/contact_us/contact.html
+++ b/contact_us/contact.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Audio Recording, Mixing, Editing, mastering, Live Session" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CYCLERS||STUDIOS</title>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
+
+
+
+    <link rel="stylesheet" href="contact.css">
     <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' />
     <link rel="icon" type="image/png" sizes="132x132" href="../images/cycler1-.png" />
 
@@ -41,7 +41,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="home.html" class="navbar__links">Home</a>
+                    <a href="../home.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="#about" class="navbar__links">About Us</a>
@@ -50,7 +50,7 @@
                     <a href="#services" class="navbar__links">Services</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="./contact_us/contact.html" class="navbar__links">Contact Us</a>
+                    <a href="#" class="navbar__links">Contact Us</a>
                 </li>
                 <li>
 
@@ -65,79 +65,57 @@
         </div>
     </nav>
 
-    <section id="contact">
-
-        <h1 class="section-header">Contact</h1>
-
-        <div class="contact-wrapper">
-
-            <!-- Left contact page -->
-
-            <form id="contact-form" class="form-horizontal" role="form">
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <input type="text" class="form-control" id="name" placeholder="NAME" name="name" value="" required>
+    <section>
+        <div class="background">
+            <div class="container">
+                <div class="screen">
+                    <div class="screen-header">
+                        <div class="screen-header-left">
+                            <div class="screen-header-button close"></div>
+                            <div class="screen-header-button maximize"></div>
+                            <div class="screen-header-button minimize"></div>
+                        </div>
+                        <div class="screen-header-right">
+                            <div class="screen-header-ellipsis"></div>
+                            <div class="screen-header-ellipsis"></div>
+                            <div class="screen-header-ellipsis"></div>
+                        </div>
+                    </div>
+                    <div class="screen-body">
+                        <div class="screen-body-item left">
+                            <div class="app-title">
+                                <span>DM US</span>
+                                <span></span>
+                            </div>
+                            <div class="app-contact">
+                                CONTACT INFO : <br><br>
+                                <+2348138016610 <br><br> +2349061331690 <br><br> +2347014364838</div>
+                        </div>
+                        <div class="screen-body-item">
+                            <div class="app-form">
+                                <div class="app-form-group">
+                                    <input class="app-form-control" placeholder="FULL NAME" value="">
+                                </div>
+                                <div class="app-form-group">
+                                    <input class="app-form-control" placeholder="EMAIL">
+                                </div>
+                                <div class="app-form-group">
+                                    <input class="app-form-control" placeholder="CONTACT NO">
+                                </div>
+                                <div class="app-form-group message">
+                                    <input class="app-form-control" placeholder="MESSAGE">
+                                </div>
+                                <div class="app-form-group buttons">
+                                    <!-- <button class="app-form-button">CANCEL</button> -->
+                                    <button class="app-form-button">SEND</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <input type="email" class="form-control" id="email" placeholder="EMAIL" name="email" value="" required>
-                    </div>
-                </div>
-
-                <textarea class="form-control" rows="10" placeholder="MESSAGE" name="message" required></textarea>
-
-                <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
-              <div class="alt-send-button">
-                <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
-              </div>
-            
-            </button>
-
-            </form>
-
-            <!-- Left contact page -->
-
-            <div class="direct-contact-container">
-
-                <ul class="contact-list">
-                    <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">City, State</span></i></li>
-
-                    <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a href="tel:1-212-555-5555" title="Give me a call">(212) 555-2368</a></span></i></li>
-
-                    <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email">hitmeup@gmail.com</a></span></i></li>
-
-                </ul>
-
-                <hr>
-                <ul class="social-media-list">
-                    <li>
-                        <a href="#" target="_blank" class="contact-icon">
-                            <i class="fa fa-github" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="contact-icon">
-                            <i class="fa fa-codepen" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="contact-icon">
-                            <i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="contact-icon">
-                            <i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    </li>
-                </ul>
-                <hr>
-
-                <div class="copyright">&copy; ALL OF THE RIGHTS RESERVED</div>
 
             </div>
-
         </div>
-
     </section>
 
 
