--- a/home.html
+++ b/home.html
@@ -20,6 +20,8 @@
 
 <body>
 
+
+
     <div id="fb-root"></div>
 
     <!-- Navbar Section -->
@@ -411,8 +413,7 @@
                         <div class="team-content">
                             <h2>Mary Odogbo</h2>
                             <h3>General Manager</h3>
-                            <p> Mary Odogbo is the General Manager of cyclers Studio with 2 years of experience in leadership. Mary helped in sourcing for funds in organizing "the Cyclers Concert" geared towards promoting cultural exchange and also serving
-                                as a platform for talent showcase. Mary is inspired daily by her family. In her free time, Mary likes to surf the net, travel, organize and decorate spaces. </p>
+                            <p> Mary Odogbo is the General Manager of cyclers Studio. Mary helped in sourcing for funds in organizing "the Cyclers Concert". Mary is inspired daily by her family. </p>
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/marye_mareey" class="fab fa-instagram" target="_blank"></a>
@@ -655,7 +656,7 @@
                 <div class="input-div">
                     <input type="text" placeholder="enter email address..." />
                     <div class="send-div">
-                        <a href=""><img src="./images/send.png" alt="send" /></a>
+                        <a href="mailto:newsletter@cyclersstudio.com"><img src="./images/send.png" alt="send" /></a>
                     </div>
                 </div>
             </div>
@@ -731,16 +732,16 @@
                             </script>
                         </p>
                         <div class="social__icons">
-                            <a class="social__icon--link" href="/" target="_blank" aria-label="Facebook">
+                            <a class="social__icon--link" href="https://web.facebook.com/cyclersstudio" target="_blank" aria-label="Facebook">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a class="social__icon--link" href="/" target="_blank" aria-label="Instagram">
+                            <a class="social__icon--link" href="https://www.instagram.com/cyclersstudio/?hl=en" target="_blank" aria-label="Instagram">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a class="social__icon--link" href="/" target="_blank" aria-label="Youtube">
+                            <a class="social__icon--link" href="https://www.youtube.com/channel/UCuWEoYftZapqW8jxqdPJY1Q/featured" target="_blank" aria-label="Youtube">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a class="social__icon--link" href="/" target="_blank" aria-label="Twitter">
+                            <a class="social__icon--link" href="https://twitter.com/CyclersStudio" target="_blank" aria-label="Twitter">
                                 <i class="fab fa-twitter"></i>
                             </a>
                             <!-- <a
